Fixed overflow issue on Androids.
Scaled blurred background image made the campaign-container scrollable. Disabled the scrolling.

--- a/src/styl/square-end-screen.styl
+++ b/src/styl/square-end-screen.styl
@@ -2,8 +2,10 @@
 
 #end-screen.square-end-screen {
   .campaign-container {
+    position: relative;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
   }
 
   .privacy-button {
